<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        app:key="account_category"
        app:title="@string/settings_category_account">
        <EditTextPreference
            app:title="@string/settings_category_user_name"
            app:key="username"
            app:useSimpleSummaryProvider="true"/>
    </PreferenceCategory>

    <PreferenceCategory app:title="@string/settings_category_messages">
        <CheckBoxPreference
            app:defaultValue="true"
            app:key="settings_notifications_enabled"
            app:switchTextOff="true"
            app:title="@string/settings_messages_notifications_title" />


    </PreferenceCategory>

    <PreferenceCategory
        app:key="help_category"
        app:title="@string/settings_category_help">
        <Preference
            app:key="feedback"
            app:summary="Report technical issues or suggest new features"
            app:title="Send feedback"/>

    </PreferenceCategory>


</PreferenceScreen>