<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/signup_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:textSize="24sp"
            android:id="@+id/textView"
            android:paddingLeft="4dp"
            android:paddingTop="16dp"
            android:paddingBottom="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="2dp"
            android:layout_marginRight="2dp"
            android:text="@string/sign_up_text"
            android:textStyle="bold"
            android:textColor="@color/colorPrimary"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>
        <TextView
            android:textSize="14sp"
            android:id="@+id/textView2"
            android:paddingLeft="4dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="2dp"
            android:layout_marginRight="2dp"
            android:text="@string/username_text"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView"/>
        <EditText android:textSize="14sp"
            android:textColor="@color/colorAccent"
            android:textColorHint="@color/colorAccent"
            android:id="@+id/username"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="4dp"
            android:layout_marginTop="7dp"
            android:layout_marginRight="4dp"
            android:hint="@string/user_entry"
            android:maxLines="1"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2"/>

        <com.google.android.material.button.MaterialButton
            android:enabled="false"
            android:textStyle="bold"
            android:textColor="#ffffff"
            android:id="@+id/register_button"
            android:background="@color/colorPrimary"
            android:padding="10dp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/action_sign_up"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/username"
            style="?android:attr/textAppearanceMedium"/>

<!--        <TextView android:textSize="14sp"-->
<!--            android:textColorLink="@color/colorPrimaryDark"-->
<!--            android:id="@+id/termsLink"-->
<!--            android:paddingLeft="14dp"-->
<!--            android:paddingTop="10dp"-->
<!--            android:paddingRight="10dp"-->
<!--            android:paddingBottom="10dp"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_marginTop="16dp"-->
<!--            android:layout_marginRight="8dp"-->
<!--            android:text="@string/terms"-->
<!--            app:layout_constraintHorizontal_bias="0.6"-->
<!--            app:layout_constraintLeft_toLeftOf="parent"-->
<!--            app:layout_constraintRight_toRightOf="parent"-->
<!--            app:layout_constraintTop_toBottomOf="@+id/register_button"/>-->
        <ProgressBar
            android:id="@+id/login_progress"
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginRight="8dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/termsLink"
            style="?android:attr/progressBarStyleLarge"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:padding="20dp"
        android:gravity="center"
        android:orientation="vertical"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:text="@string/from"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="@color/colorPrimary"
            android:text="@string/spaced_meshify"/>

    </LinearLayout>

</RelativeLayout>